--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   image_picker: ^1.0.7
   firebase_storage: ^11.6.0
   fluttertoast: ^8.2.4 
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
